2005-05-21  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (SIG_HANDLER_SIGNATURE): Fix warning.

	* driver.c: Always print failed tests.

	* mini-codegen.c: Use cfg->frame_reg instead of a macro for the
	frame pointer.

	* *ia64*: Ongoing IA64 work.

2005-05-20  Zoltan Varga  <vargaz@freemail.hu>

	* basic.cs: Add tests for add.ovf. Fix warnings.

2005-05-18  Miguel de Icaza  <miguel@novell.com>

	* driver.c (mono_main): Avoid crash if no argument is passed to
	--break;  Do not use g_error, but f_printf.   And fix all other
	ocurrences of the same crash.

2005-05-17  Zoltan Varga  <vargaz@freemail.hu>

	* mini.h mini.c: Generalize the existing uses of the MONO_DEBUG env variable
	and add a new one: aborting when a SIGSEGV is raised while in unmanaged code.
	Fixes #74742.

2005-05-14  Zoltan Varga  <vargaz@freemail.hu>

	* *-ia64.*: Add beginnings of IA64 backend.

	* Makefile.am mini-arch.h mini-codegen.c: Add IA64 support.	

2005-05-13  Zoltan Varga  <vargaz@freemail.hu>

	* inssel-long.brg: Add missing ulong->{i1, i2} checked conversions.
	Fixes #74925.

	* basic-long.cs exceptions.cs: Add new tests. Fix some warnings.

	* mini-amd64.c: Fix a warning.

2005-05-10  Zoltan Varga  <vargaz@freemail.hu>

	* mini-amd64.c (mono_arch_output_basic_block): Fix stack space leakage
	in float_neg. Fixes #74897.

	* mini-amd64.c (emit_call): Fix another near call bug.

2005-05-06  Sebastien Pouliot  <sebastien@ximian.com>

	* declsec.c: Keep the appdomain information in the structure. Added a 
	missing "return	FALSE" for Unmanaged if FullTrust is set (or else the
	value gets overwritten).
	* declsec.h: Set the default MonoArray for the the stack to 6. Added
	an MonoAppDomain member to MonoSecurityFrame.
	* mini-exceptions.c: Do not use a glist to keep GC allocated objects
	used in the stack walk. Now use a MonoArray which grow (double) when
	it gets full.

2005-05-05  Lluis Sanchez Gual  <lluis@novell.com>

	* mini.c: Re-enabled runtime cleanup, since running threads should