@@ -715,5 +715,14 @@ class Tests {
 			return 2;
 		return 0;
 	}
+
+	public static unsafe int test_0_pin_string () {
+		string x = "xxx";
+		fixed (char *c = x) {
+			if (*c != 'x')
+				return 1;
+		}
+		return 0;
+	}
 }
 
